--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node"
   ],
   "author": "jdtzmn <jdtzmn@gmail.com>",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/jdtzmn/node-vr-controller/issues"
   },
