--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "cookie-parser": "^1.4.3",
     "express": "~4.13.4",
     "express-ws": "^2.0.0-rc.1",
     "minimist": "^1.2.0",
-    "robotjs": "^0.4.4"
+    "robotjs": "^0.4.4",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
