--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "express": "~4.13.4",
     "express-ws": "^2.0.0-rc.1",
     "minimist": "^1.2.0",
+    "qrcode-reader": "^0.2.2",
+    "qrcode-terminal": "^0.11.0",
     "robotjs": "^0.4.4",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "uuid": "^2.0.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
