--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "bower": "^1.7.9",
     "cookie-parser": "^1.4.3",
     "express": "~4.13.4",
-    "express-ws": "^2.0.0-rc.1",
     "minimist": "^1.2.0",
     "qrcode-reader": "^0.2.2",
     "qrcode-terminal": "^0.11.0",
     "robotjs": "^0.4.4",
     "sha256": "^0.2.0",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "uws": "^0.11.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
