--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "gulp": "./node_modules/.bin/gulp"
+    "gulp": "gulp",
+    "install": "bower install"
   },
   "repository": {
     "type": "git",
